load("@rules_deb//distroless:defs.bzl", "flatten", "group", "passwd")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@sonic_build_infra//config:arch.bzl", "DEBIAN_ARCH")
load("@sonic_build_infra//python:site_packages.bzl", "site_packages")
load("@tar.bzl", "mutate", "tar")

exports_files(["etc/rsyslog.conf"])

# jinjanator provides `j2` (the Dockerfile.j2 uses `pip3 install jinjanator`).
site_packages(
    name = "pip_layer",
    srcs = [
        "@pip_pmon9//jinjanator",
        "@pip_pmon9//supervisor",
        "@pip_pmon9//supervisord_dependent_startup",
        # supervisor 4.2.5 imports pkg_resources at module load; provide it
        # via pip since the system python3-setuptools .deb is not in the flat
        # layer (rules_distroless mixed-arch bug on Architecture:all packages).
        "@pip_pmon9//setuptools",
    ],
    venv = "docker-base-trixie",
    visibility = [":__subpackages__"],
)

# Single Python content layer: pip-installed packages (via site_packages) +
# sonic-built wheels' :install tars, deduplicated.
flatten(
    name = "python_layer",
    deduplicate = True,
    tars = [
        ":pip_layer",
        "@sonic-supervisord-utilities//:install",
    ],
    visibility = [":__subpackages__"],
)

passwd(
    name = "passwd",
    entries = [
        {
            "uid": 0,
            "gid": 0,
            "home": "/root",
            "shell": "/bin/bash",
            "username": "root",
        },
        # redis system user. In Debian this is created by the redis-tools
        # postinst (a Depends of redis-server), which runs:
        #   adduser --system --home /var/lib/redis --group redis
        # (home /var/lib/redis, shell /usr/sbin/nologin — the adduser --system
        # defaults). Bazel installs the deb's data tar WITHOUT running postinst,
        # so no redis user gets created and docker-database-init.sh's
        # `chown -R redis:redis ...` fails at startup — hence we create it here.
        # NOTE on uid/gid: `adduser --system` dynamically allocates a uid in
        # 100-999; Debian does NOT fix it at 100/101. We pin 100/101 purely for
        # self-consistency with the /etc/redis chown already hardcoded in
        # docker-database's BUILD (uid=100/gid=101). The container resolves
        # `redis:redis` by NAME (not number), so the exact value only needs to
        # be internally consistent across this image, which it is.
        {
            "uid": 100,
            "gid": 101,
            "home": "/var/lib/redis",
            "shell": "/usr/sbin/nologin",
            "username": "redis",
        },
        # _apt system user. Debian's apt postinst creates it via
        #   adduser --force-badname --system --home /nonexistent --no-create-home _apt
        # (no --group, so it lands in nogroup / gid 65534). apt uses _apt to drop
        # privileges when fetching over the network. The apt package is shipped
        # here to provide libapt-private.so.0.0 (needed by apt-ftparchive /
        # apt-sortpkgs from apt-utils); Bazel installs deb data without running
        # postinst, so we replicate the _apt user creation for completeness.
        # uid is pinned (declarative passwd can't allocate dynamically); 105 is
        # unused and avoids the redis(100) conflict. gid 65534 = nogroup.
        {
            "uid": 105,
            "gid": 65534,
            "home": "/nonexistent",
            "shell": "/usr/sbin/nologin",
            "username": "_apt",
        },
        # _lldpd system user. Created by the lldpd deb postinst (see
        # src/lldpd/BUILD.bazel), which runs:
        #   adduser --system --home /run/lldpd --no-create-home --group _lldpd
        # lldpd is compiled with privilege separation, so it drops to _lldpd at
        # startup and REFUSES to run without it ("no _lldpd user for privilege
        # separation, please create it" -> exit). Bazel installs deb data
        # without running postinst, so we create the user here. uid/gid are
        # pinned (declarative passwd can't allocate dynamically); 101/102 avoid
        # the redis(100/101) and _apt(105) values already in use. lldpcli's
        # setgid-adm 4750 override is handled in docker-lldp's BUILD.
        {
            "uid": 101,
            "gid": 102,
            "home": "/run/lldpd",
            "shell": "/usr/sbin/nologin",
            "username": "_lldpd",
        },
        # Debian-snmp system user. Created by the snmpd apt package postinst,
        # which runs:
        #   adduser --quiet --system --group Debian-snmp (home /var/lib/snmp)
        # docker-snmp launches `snmpd -u Debian-snmp -g Debian-snmp`, which
        # aborts with "Bad user id: Debian-snmp" if the user is missing. Bazel
        # installs deb data without running postinst, so we create it here.
        # uid/gid pinned to 102/103 (next free after _lldpd).
        {
            "uid": 102,
            "gid": 103,
            "home": "/var/lib/snmp",
            "shell": "/usr/sbin/nologin",
            "username": "Debian-snmp",
        },
    ],
)

group(
    name = "group",
    entries = [
        {
            "name": "root",
            "gid": 0,
        },
        {
            "name": "adm",
            "gid": 4,
        },
        {
            "name": "redis",
            "gid": 101,
        },
        # Per-user groups created by adduser --group in the lldpd / snmpd
        # postinst (see the matching passwd entries above).
        {
            "name": "_lldpd",
            "gid": 102,
        },
        {
            "name": "Debian-snmp",
            "gid": 103,
        },
        # nogroup: the default group for --system users created without --group
        # (e.g. _apt above). Standard Debian gid 65534.
        {
            "name": "nogroup",
            "gid": 65534,
        },
    ],
)

tar(
    name = "rootfs",
    srcs = glob([
        "etc/**/*",
        "root/*",
    ]),
    mutate = mutate(strip_prefix = package_name()),
)

# Extra directories + the vim.tiny -> vim hardlink that the Make Dockerfile.j2
# performs at the end (`RUN ln /usr/bin/vim.tiny /usr/bin/vim`). Using a
# symlink here is close enough — Bazel oci tarballs cannot express hardlinks.
tar(
    name = "rootdirslinks",
    mtree = [
        "./bin/sh type=link link=/bin/bash",
        "./var/log/supervisor type=dir",
        "./etc/supervisor/conf.d type=dir",
        "./usr/bin/vim type=link link=/usr/bin/vim.tiny",
        # The pip-installed supervisord entry-point uses a shell shebang that
        # resolves `python3` as a sibling of the script under /usr/local/bin
        # (i.e. `$(dirname $0)/python3`). Debian's python3 lives at
        # /usr/bin/python3, so add a symlink so supervisord (and any other
        # /usr/local/bin scripts from pip installs) can find it.
        "./usr/local/bin/python3 type=link link=/usr/bin/python3",
        # Debian provides /usr/bin/awk via the alternatives system (-> mawk),
        # set up by mawk's postinst/update-alternatives. The minimal Bazel
        # rootfs doesn't run that, so create the symlink directly; without it
        # scripts calling `awk` (e.g. docker-database-init.sh) fail with
        # "awk: command not found". mawk is present in the base rootfs.
        "./usr/bin/awk type=link link=/usr/bin/mawk",
        # More update-alternatives symlinks that Debian postinst scripts create
        # (debianutils / mawk / vim-tiny) but the minimal Bazel rootfs doesn't.
        # All target programs are already present in the base rootfs. `which` is
        # used by 13 SONiC startup scripts; nawk mirrors awk; vi/view/ex/editor/
        # rview/pager are the standard editor/pager alternatives.
        "./usr/bin/which type=link link=/usr/bin/which.debianutils",
        "./usr/bin/nawk type=link link=/usr/bin/mawk",
        "./usr/bin/vi type=link link=/usr/bin/vim.tiny",
        "./usr/bin/view type=link link=/usr/bin/vim.tiny",
        "./usr/bin/ex type=link link=/usr/bin/vim.tiny",
        "./usr/bin/editor type=link link=/usr/bin/vim.tiny",
        "./usr/bin/rview type=link link=/usr/bin/vim.tiny",
        "./usr/bin/pager type=link link=/usr/bin/less",
    ],
)

# Debian package closure pulled from the @trixie apt repo. apt resolves
# transitive deps automatically; listing the direct Dockerfile.j2 packages plus
# the base rootfs set is sufficient.
flatten(
    name = "flat",
    deduplicate = True,
    tars = [
        # NOTE on `:data` vs bare label:
        #   rules_distroless generates two forms per package:
        #     1. `@trixie//<pkg>` — top-level filegroup that select()s into
        #        `//<pkg>/<arch>`, which is itself a filegroup listing the
        #        package + all of its arch-specific apt-resolved transitive
        #        deps. This is the DESIRED shape and pulls a clean single-arch
        #        subtree for arch-specific packages.
        #     2. `@trixie//<pkg>:data` — an alias to just the package's own
        #        .deb data tar (single arch via select), no transitives.
        #
        #   BUG: for Architecture:all packages (ca-certificates, python-is-
        #   python3, python3-pip, python3-setuptools, python3-wheel), the
        #   `//<pkg>/amd64` filegroup incorrectly hardcodes BOTH amd64 AND
        #   arm64 sibling deps (`<pkg>/amd64/BUILD.bazel` in
        #   rules_distroless++apt+trixie has both arch labels in `srcs`).
        #   Referencing the bare label leaks arm64 files into the amd64 image.
        #   For these packages we use `:data` (own data only) and rely on the
        #   arch-specific packages in this same list to supply their
        #   transitive runtime deps (libc6, libssl3t64, gcc-14-base, etc.).
        # base rootfs
        "@trixie//base-files",
        "@trixie//base-passwd",
        "@trixie//ca-certificates:data",  # arch:all — bare label buggy
        "@trixie//libc6",
        "@trixie//libc-bin",
        # libssl3t64 + openssl are supplied by the FIPS layer (fips_pkgs)
        # below, since Make defaults to INCLUDE_FIPS=y. Do not pull the
        # Debian versions here — they would conflict with the FIPS-patched
        # libcrypto/libssl and openssl binary.
        "@trixie//netbase",
        "@trixie//tzdata",
        "@trixie//media-types",
        "@trixie//gcc-14-base",
        "@trixie//libgcc-s1",
        "@trixie//libstdc++6",
        ":passwd",
        ":group",

        # shell / coreutils
        "@trixie//bash",
        "@trixie//coreutils",
        "@trixie//dash",
        "@trixie//debianutils",
        "@trixie//diffutils",
        "@trixie//findutils",
        "@trixie//grep",
        "@trixie//gzip",
        "@trixie//hostname",
        "@trixie//mount",
        "@trixie//ncurses-base",
        "@trixie//ncurses-bin",
        "@trixie//sed",
        "@trixie//util-linux",
        "@trixie//bsdutils",
        "@trixie//login",
        "@trixie//sysvinit-utils",

        # Dockerfile.j2 explicit installs
        "@trixie//curl",
        "@trixie//less",
        "@trixie//perl",
        "@trixie//procps",
        "@trixie//python3",
        # python3-pip, python3-setuptools, python3-wheel, python-is-python3
        # are Architecture:all packages with the buggy per-arch filegroup —
        # use `:data` so only their own data tar (Arch:all, single tar) is
        # pulled. Their runtime deps are the same python3 stack pulled by
        # `@trixie//python3` above, which is clean.
        "@trixie//python3-pip:data",
        "@trixie//python3-setuptools:data",
        "@trixie//python3-wheel:data",
        "@trixie//python-is-python3:data",
        "@trixie//vim-tiny",
        "@trixie//rsyslog",
        "@trixie//rsyslog-relp",
        "@trixie//rsync",
        "@trixie//redis-tools",
        "@trixie//libdaemon0",
        "@trixie//libdbus-1-3",
        "@trixie//libjansson4",
        "@trixie//net-tools",
        "@trixie//jq",
        "@trixie//libzmq5",
        "@trixie//libwrap0",
        "@trixie//libatomic1",
        "@trixie//libbpf1",
        "@trixie//libmnl0",
        # ss / tc runtime deps (libtirpc.so.3 / libxtables.so.12).
        "@trixie//libtirpc3t64",
        "@trixie//libxtables12",
        # libseccomp.so.2 + apt main program & libs (libapt-pkg.so.7.0 /
        # libapt-private.so.0.0) — Make ships these in the base image.
        "@trixie//libseccomp2",
        "@trixie//libapt-pkg7.0",
        "@trixie//apt",
        # capsh / getcap / getpcaps / setcap — inherited by Make's base from
        # the debian:trixie base rootfs.
        "@trixie//libcap2-bin",

        # Explicit transitive registration to guarantee inclusion. All arch-
        # specific here — safe to use the bare label.
        "@trixie//libpython3-stdlib",
        "@trixie//libpython3.13-stdlib",
        "@trixie//libpython3.13-minimal",
        "@trixie//python3.13",
        "@trixie//python3.13-minimal",
        "@trixie//python3-minimal",
        "@trixie//libgmp10",
        "@trixie//libpcre2-8-0",
    ],
)

# SONiC-built .debs (data tars). rules/docker-base-trixie.mk L6-L7 lists
# SOCAT and IPROUTE2 as _DEPENDS. Both are re-wrapped upstream apt data tars
# (see src/socat/BUILD.bazel and src/iproute2/BUILD.bazel — they expose only
# `_data`, no `_statusd` alias).
flatten(
    name = "sonic_pkgs",
    deduplicate = True,
    tars = [
        "@iproute2//:iproute2_6.15.0-1.deb_data",
        "@socat//:socat_1.8.0.3-1.deb_data",
    ],
)

# FIPS package layer. Make defaults to INCLUDE_FIPS=y (rules/config L380),
# and rules/docker-base-trixie.mk L16-18 adds 8 FIPS debs to _DEPENDS. These
# replace Debian's libssl3t64/openssl (removed from the flat layer above) with
# SONiC's FIPS-patched OpenSSL + SymCrypt provider + FIPS krb5. Each package
# contributes _data (file content) and _statusd (dpkg status.d stub for
# `dpkg -l`). From @sonic-fips (external_fips_deb macro).
flatten(
    name = "fips_pkgs",
    deduplicate = True,
    tars = [
        "@sonic-fips//:libssl3t64_3.5.4-1+fips.deb_data",
        "@sonic-fips//:libssl3t64_3.5.4-1+fips.deb_statusd",
        "@sonic-fips//:libssl-dev_3.5.4-1+fips.deb_data",
        "@sonic-fips//:libssl-dev_3.5.4-1+fips.deb_statusd",
        "@sonic-fips//:openssl_3.5.4-1+fips.deb_data",
        "@sonic-fips//:openssl_3.5.4-1+fips.deb_statusd",
        "@sonic-fips//:symcrypt-openssl_1.9.4.deb_data",
        "@sonic-fips//:symcrypt-openssl_1.9.4.deb_statusd",
        "@sonic-fips//:libk5crypto3_1.21.3-5+fips.deb_data",
        "@sonic-fips//:libk5crypto3_1.21.3-5+fips.deb_statusd",
        "@sonic-fips//:libkrb5support0_1.21.3-5+fips.deb_data",
        "@sonic-fips//:libkrb5support0_1.21.3-5+fips.deb_statusd",
        "@sonic-fips//:libkrb5-3_1.21.3-5+fips.deb_data",
        "@sonic-fips//:libkrb5-3_1.21.3-5+fips.deb_statusd",
        "@sonic-fips//:libgssapi-krb5-2_1.21.3-5+fips.deb_data",
        "@sonic-fips//:libgssapi-krb5-2_1.21.3-5+fips.deb_statusd",
    ],
)

oci_image(
    name = "docker-base-trixie",
    architecture = DEBIAN_ARCH,
    # Match the Make base-trixie image: no ENTRYPOINT (Dockerfile declares
    # none; Make image Entrypoint=null) and Env carries only PATH. The former
    # entrypoint=supervisord + DEBIAN_FRONTEND/PYTHONPATH were deviations from
    # the Make image. PYTHONPATH is no longer needed: PYTHON_MAJOR_MINOR is now
    # 3.13 in sonic_rules, so site_packages lays pip content into
    # /usr/lib/python3/dist-packages/ (already on sys.path).
    env = {
        "PATH": "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin",
    },
    os = "linux",
    tars = [
        ":rootfs",
        ":rootdirslinks",
        ":flat",
        ":python_layer",
        ":sonic_pkgs",
        ":fips_pkgs",
    ],
    visibility = ["//visibility:public"],
)

oci_load(
    name = "load",
    image = ":docker-base-trixie",
    repo_tags = ["docker-base-trixie:latest"],
)

# Debug tools layer, shared by all trixie debug image variants. Not baked
# into the base image; overlaid onto debug variant images. Covers
# _DBG_IMAGE_PACKAGES.
flatten(
    name = "debug-packages",
    deduplicate = True,
    tars = [
        "@trixie//gdb:data",
        "@trixie//gdbserver:data",
        # trixie's `vim` apt metapackage resolves to the concrete `vim-nox`
        # binary package; that's the repo directory rules_distroless emits.
        "@trixie//vim-nox:data",
        "@trixie//openssh-client:data",
        "@trixie//sshpass:data",
        "@trixie//strace:data",
    ],
    visibility = ["//visibility:public"],
)
