apt = use_extension("@rules_deb//apt:extensions.bzl", "apt")
# =====================================================================
# APT source URIs. Match sonic_rules/MODULE.bazel's snapshot pin.
#
# All workspace modules (sonic_rules + every src/*/MODULE.bazel + this
# module) now register the same snapshot.debian.org URIs for the trixie
# suites, so rules_distroless's last-writer-wins `lock.sources[suite]`
# resolves deterministically to the snapshot mirror. That mirror retains
# every historical .deb, so `_discover_so_targets_for_package`'s
# synchronous download at analysis time is stable — no 404s from live
# mirrors that have since evicted the pinned versions.
# =====================================================================
apt.sources_list(
    architectures = ["amd64", "arm64"],
    components = ["main"],
    suites = [
        "trixie",
        "trixie-updates",
    ],
    uris = ["https://snapshot.debian.org/archive/debian/20260409T202916Z"],
)
apt.sources_list(
    architectures = ["amd64", "arm64"],
    components = ["main"],
    suites = ["trixie-security"],
    uris = ["https://snapshot.debian.org/archive/debian-security/20260409T182303Z"],
)
apt.install(
    dependency_set = "trixie",
    packages = [
        # do not sort
        # -------- base rootfs closure --------
        "base-files",
        "base-passwd",
        "ca-certificates",
        "libc6",
        "libc-bin",
        # trixie ships the 64-bit time_t (t64) variants of many libs
        "libssl3t64",
        "netbase",
        "openssl",
        "tzdata",
        "media-types",
        "gcc-14-base",
        "libgcc-s1",
        "libstdc++6",

        # -------- coreutils / shell --------
        "bash",
        "coreutils",
        "dash",
        "debianutils",
        "diffutils",
        "findutils",
        "grep",
        "gzip",
        "hostname",
        "mount",
        "ncurses-base",
        "ncurses-bin",
        "sed",
        "util-linux",
        "login",
        "sysvinit-utils",

        # -------- Dockerfile.j2 explicit apt -y install list --------
        "curl",
        "less",
        "perl",
        "procps",
        "python3",
        "python3-pip",
        "python3-setuptools",
        "python3-wheel",
        "python-is-python3",
        "vim-tiny",
        "rsyslog",
        "rsyslog-relp",
        "rsync",
        "redis-tools",
        "libdaemon0",
        "libdbus-1-3",
        "libjansson4",
        "net-tools",
        "jq",
        "libzmq5",
        "libwrap0",
        "libatomic1",
        "libbpf1",
        "libmnl0",

        # -------- known transitives to explicitly register --------
        "libpython3-stdlib",
        "libpython3.13-stdlib",
        "libpython3.13-minimal",
        "python3.13",
        "python3.13-minimal",
        "python3-minimal",
        "libgmp10",
        "libpcre2-8-0",

        # -------- docker-config-engine-trixie runtime apt deps --------
        # From docker-config-engine-trixie/Dockerfile.j2's `apt install`. Only
        # the runtime survivors are listed here — build-essential and
        # python3-dev are apt-purged at the end of that Dockerfile, so they are
        # build-only and not shipped. The @trixie apt pool is shared across all
        # trixie dockers, so these live here rather than in a per-docker pool.
        "apt-utils",
        "python3-cffi",
        "python3-redis",
        "python3-yaml",

        # -------- docker-swss-layer-trixie runtime apt deps --------
        # iputils-ping: docker-swss-layer-trixie/Dockerfile.j2 `apt install -y
        # iputils-ping`. libprotobuf32t64: pulled in by `apt install swss.deb`
        # (swss Depends libprotobuf32t64); it is not shipped by
        # docker-config-engine-trixie, so the swss layer is the first image to
        # carry it. Both live in the shared @trixie pool per project convention.
        "iputils-ping",
        "libprotobuf32t64",

        # -------- docker-platform-monitor runtime apt deps --------
        # From docker-platform-monitor/Dockerfile.j2's `apt install`. Runtime
        # survivors only — build-essential, python3-dev, librrd-dev are apt-purged
        # (or build-only) and not shipped. Shared @trixie pool, same as the
        # config-engine block above. vs son624 bookworm: librrd8 -> librrd8t64
        # (trixie t64 rename), drop python3-jsonschema (not needed for trixie
        # pmon), add python3-bottle + smartmontools (trixie ships smartmontools
        # in main, no longer needs bookworm-backports). iputils-ping is already
        # declared in the swss-layer block above (shared).
        "ipmitool",
        "librrd8t64",
        "rrdtool",
        "python3-smbus",
        "i2c-tools",
        "psmisc",
        "python3-netifaces",
        "python3-bottle",
        "libpci3",
        "nvme-cli",
        "xxd",
        "smartmontools",
        "dmidecode",
        "pciutils",
        "ethtool",

        # -------- docker-database runtime apt deps --------
        # docker-database/Dockerfile.j2 `apt install -y redis-tools redis-server`.
        # redis-tools is already registered above (base rootfs). redis-server is
        # NOT present in docker-config-engine-trixie base, so docker-database is
        # the first image to carry the redis-server files (daemon binary,
        # /etc/init.d + systemd units, default redis.conf). libprotobuf32t64 (the
        # runtime dep of libdashapi's protobuf) is already registered above.
        "redis-server",

        # -------- docker-snmp runtime apt deps --------
        # docker-snmp/Dockerfile.j2 `apt install -y ... snmp snmpd`. On trixie
        # snmp/snmpd come straight from Debian apt — rules/snmpd.mk only builds
        # them from source on bookworm (the whole SNMP/SNMPD/LIBSNMP block is
        # inside `ifeq ($(BLDENV),bookworm)`), so on trixie those Make vars are
        # empty and the packages are apt-sourced. libsnmp40t64 + libsnmp-base
        # are the runtime lib deps pulled in by snmp/snmpd. ipmitool is already
        # registered above (shared with docker-platform-monitor). python3-dev,
        # gcc, make are build-only (apt-purged in the Dockerfile) — not shipped.
        "snmp",
        "snmpd",
        "libsnmp40t64",
        "libsnmp-base",

        # -------- Debug-only variant packages (rules/docker-base-trixie.mk _DBG_IMAGE_PACKAGES) --------
        # These are NOT baked into the base image (see BUILD.bazel `flat` list),
        # but registered here so the `debug-packages` flatten target can pull
        # them. Mirrors bookworm's split.
        "gdb",
        "gdbserver",
        "vim",
        "openssh-client",
        "sshpass",
        "strace",
    ],
    suites = [
        "trixie",
        "trixie-updates",
        "trixie-security",
    ],
)
apt.lock(
    into = "packages.lock",
)
use_repo(apt, "trixie")

# Hub name is "pip_pmon8". The aspect_rules_py uv extension marks itself
# reproducible=True (still true in 1.11.7), so Bazel caches its generated hub
# repo and does NOT re-evaluate it when only uv.lock's contents change. Each
# time the pip closure grows, the hub name must be bumped to force a fresh
# evaluation that reads the current uv.lock package closure.
# History: "pip" -> "pip_ce"/"pip_ce2" (config-engine + docker-database) ->
# "pip_pmon4"/"pip_pmon5" (docker-platform-monitor deps). A cross-branch merge
# left those names inconsistent (declared pip_pmon5 while pmon still referenced
# pip_pmon4 and docker-database referenced pip_ce2). Adding docker-snmp's pip
# deps (hiredis/python-arptable; smbus uses apt python3-smbus, not pip) bumps
# to "pip_pmon8" and unifies ALL consumers onto @pip_pmon8//<pkg>.
#
# Migrated to the aspect_rules_py 1.11.7 uv API: uv.project(pyproject, lock)
# replaces the old declare_venv + lockfile pair, and unstable_annotate_packages
# (keyed on lock) replaces unstable_annotate_requirements. The venv name that
# site_packages/py_venv targets select equals this project's [project].name
# ("docker-base-trixie").
uv = use_extension("@aspect_rules_py//uv/unstable:extension.bzl", "uv")
uv.declare_hub(hub_name = "pip_pmon8")
uv.project(
    hub_name = "pip_pmon8",
    pyproject = "//dockers/docker-base-trixie:pyproject.toml",
    lock = "//dockers/docker-base-trixie:uv.lock",
)

# Attach `wheel` as a build-dependency for sdist-only packages (bitarray on
# Python 3.13). The extension's default sdist build venv only has
# {setuptools, build}; this annotation adds `wheel` so bitarray's setuptools
# backend can build. See pip_annotations.toml for details.
uv.unstable_annotate_packages(
    lock = "//dockers/docker-base-trixie:uv.lock",
    src = "//dockers/docker-base-trixie:pip_annotations.toml",
)
use_repo(uv, "pip_pmon8")
